# battery-notifier

./: Cargo.toml  README.md
docs/: battery_notifier_s.service  config.json  install.sh
src/: actions.rs  config.rs  lib.rs  main.rs  types.rs
