[package]
name = "battery_notifier"
version = "0.1.0"
authors = ["Sanket Chaudhari <chaudharisanket2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.5"
notify-rust = "3.6.3"
rustc-serialize = "0.3"
