[package]
name = "battery_notifier"
version = "0.1.0"
authors = ["Sanket Chaudhari <chaudharisanket2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
battery = "0.7.5"
serde_json = "1.0"
notify-rust = "3.6.3"
daemonize = "0.4"
